# python-pdf-parser-renderer

./: .gitignore  README.md  cli_actions.py  main.py  pyproject.toml  requirements.txt
detectors/: ocr_detectors.py  question_detectors.py
engine/: engine_state.py  pdf_engine.py  pdf_font.py  pdf_stream_parser.py  pdf_utils.py
gui/: advanced_pdf_gui.py  browser_manager.py
models/: core_models.py  question.py
