[project]
name = "pdf-element-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argcomplete==3.6.2",
    "cryptography>=46.0.3",
    "fonttools==4.57.0",
    "freetype-py==2.5.1",
    "google-genai==1.16.1",
    "markdown-it-py==3.0.0",
    "numpy==2.2.5",
    "pillow==11.2.1",
    "playwright>=1.55.0",
    "pycairo==1.28.0",
    "pymupdf>=1.26.5",
    "pypdf==5.5.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "tqdm==4.67.1",
]
